# spremuta

./: .envrc  .ghci  .gitignore  .terraform.lock.hcl  DESIGN.md  README.md  cabal.project  repo.tf  spremuta.cabal
.github/workflows/: build.yml  lint.yml
app/: Main.hs  Options.hs
hooks/: pre_commit.py
iotest/: IOTest.hs
lib/: Daemon.hs  Exception.hs  Log.hs  Parse.hs  Request.hs  RequestMaker.hs  TasksFile.hs  Types.hs
test/: Test.hs
test/golden/: help.txt  help_daemon.txt  help_task.txt
