cabal-version:      2.4
name:               spremuta
version:            0.1.0.0

synopsis:           Automation for my interactions with GitHub

bug-reports:        https://github.com/smelc/spremuta/issues

-- license:
author:             Clement Hurlin
maintainer:         clement.hurlin@gmail.com

copyright:          Do whatever you want with that
-- category:
extra-source-files: CHANGELOG.md

executable spremuta
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
