cabal-version:      2.4
name:               spremuta
version:            0.1.0.0

synopsis:           Automation for my interactions with GitHub

bug-reports:        https://github.com/smelc/spremuta/issues

-- license:
author:             Clement Hurlin
maintainer:         clement.hurlin@gmail.com

copyright:          Do whatever you want with that
-- category:
extra-source-files: CHANGELOG.md

common common-all
     default-language: Haskell2010
     build-depends:    base ^>=4.17.0.0
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , conduit
                     , extra
                     , http-conduit
                     , megaparsec
		             , mtl
                     , text
     hs-source-dirs:   lib
     other-modules:    Exception
                     , Parse
                     , Request
                     , Types
     ghc-options:      -Wall
                       -Wunticked-promoted-constructors
                       -Wno-name-shadowing
                       -Werror
                       -Wwarn=missing-home-modules
    default-extensions: DataKinds
                        DuplicateRecordFields
                        GADTs
                        NamedFieldPuns
                        LambdaCase
                        OverloadedRecordDot
                        OverloadedStrings
                        ScopedTypeVariables
                        TypeApplications

executable spremuta
    import: common-all
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Options

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0
                    , aeson
                    , extra
                    , http-conduit
                    , optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite testmuta
    import:           common-all
    type:             exitcode-stdio-1.0
    main-is:          Test.hs
    hs-source-dirs:   lib
                    , test
    other-modules:
    build-depends:    generic-random
                    , hspec
                    , QuickCheck
